Change dev deploy