@@ -11,15 +11,15 @@ repositories {
     mavenCentral()
 }
 
-//configurations {
-//    developmentOnly
-//    runtimeClasspath {
-//        extendsFrom developmentOnly
-//    }
-//    compileOnly {
-//        extendsFrom annotationProcessor
-//    }
-//}
+configurations {
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
+    }
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -30,7 +30,7 @@ dependencies {
     implementation 'org.flywaydb:flyway-core'
     implementation 'mysql:mysql-connector-java'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.2'
-//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testCompile "org.testcontainers:testcontainers:1.14.3"
     testCompile "org.testcontainers:mariadb:1.14.3"
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
@@ -39,18 +39,21 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:3.5.10'
 }
 // for dev
-//task copyLibs(type: Copy) {
-//    from configurations.runtimeClasspath
-//    into "${buildDir}/dependencies"
-//}
-//
-//build.dependsOn(copyLibs)
+task copyLibs(type: Copy) {
+    from configurations.runtimeClasspath
+    into "${buildDir}/dependencies"
+}
+
+build.dependsOn(copyLibs)
 // for dev end
 
 tasks.withType(JavaCompile).all {
     options.compilerArgs += ['--enable-preview']
 }
 
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
 test {
     jvmArgs '--enable-preview'
     useJUnitPlatform()
